# FINNOVA-AI

./: .gitignore  API_GUIDE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  FRONTEND_TEST_REPORT.md  GETTING_STARTED.md  PROJECT_SCAN_REPORT.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  setup.bat  setup.sh  vercel.json
backend/: .env.example  Dockerfile  app_test.py  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analytics_routes.py  auth_deps.py  auth_routes.py  budget_routes.py  chat_routes.py  goal_routes.py  receipt_routes.py  transaction_routes.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  session.py
backend/app/ml/: __init__.py  categorizer.py  forecaster.py  fraud_detector.py
backend/app/models/: __init__.py  models.py
backend/app/ocr/: __init__.py  image_processor.py  ocr_processor.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: __init__.py  ai_assistant.py  user_service.py
frontend/: .env.example  .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/public/: sw.js
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/lib/: api-client.ts
frontend/src/services/: analytics.service.ts  auth.service.ts  chat.service.ts  receipt.service.ts  transaction.service.ts
frontend/src/store/: auth.ts  ui.ts
frontend/src/types/: index.ts
(+23 files in other folders)
