[tool.poetry]
name = "finnova-ai-backend"
version = "1.0.0"
description = "FastAPI backend for Finnova AI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"

pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.1.1"
python-multipart = "^0.0.6"

emails = "^0.6"

celery = "^5.3.4"
redis = "^5.0.1"

requests = "^2.31.0"
httpx = "^0.25.2"

pillow = "^10.1.0"
opencv-python = "^4.8.1.78"
pytesseract = "^0.3.10"
pdfplumber = "^0.10.3"

pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
xgboost = "^2.0.2"

cloudinary = "^1.36.0"
python-dotenv = "^1.0.0"

pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"